--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://github.com/Pedro-Martes/Pomodoro-Timer",
   "name": "02-ignite-timer",
   "private": true,
   "version": "0.0.0",
@@ -8,11 +9,14 @@
     "build": "tsc && vite build",
     "preview": "vite preview",
     "lint": "eslint src --ext .ts,.tsx",
-    "lint-fix": "eslint src --ext .ts,.tsx --fix"
+    "lint-fix": "eslint src --ext .ts,.tsx --fix",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "dependencies": {
     "@hookform/resolvers": "^2.9.8",
     "date-fns": "^2.29.3",
+    "gh-pages": "^4.0.0",
     "git": "^0.1.5",
     "immer": "^9.0.15",
     "phosphor-react": "^1.4.1",
